# MixFormerV2

./: README.md  README.zh-CN.md  export_onnx.py  export_onnx_4.py  inference.py  inference_onnx.py  install_requirements.sh  onnx_inference.py  pyproject.toml  research_notes.md  simplify_onnx.py  test_onnx_inference.py
lib/models/mixformer2_vit/: head.py  mixformer2_vit.py  mixformer2_vit_online.py  mixformer2_vit_stu.py
lib/models/mixformer_vit/: mixformer_vit.py
lib/test/evaluation/: tracker.py
lib/test/tracker/: mixformer2_vit.py
lib/train/: run_training.py
lib/train/trainers/: base_trainer.py
lib/utils/: save_utils.py
tracking/: video_demo.py
