[project]
name = "mixformerv2"
version = "0.1.0"
description = "MixFormerV2 tracking project configured for uv"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "colorama>=0.4.6",
    "cython>=3.1.0",
    "easydict>=1.13",
    "einops>=0.8.1",
    "gdown>=5.2.0",
    "jpeg4py>=0.1.4",
    "lmdb>=1.7.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "onnx>=1.19.0",
    "onnxruntime>=1.22.0",
    "onnxscript>=0.6.2",
    "onnxsim>=0.4.36",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.0",
    "pycocotools>=2.0.10",
    "pyyaml>=6.0.2",
    "scipy>=1.16.0",
    "six>=1.17.0",
    "tensorboard>=2.20.0",
    "thop>=0.1.1.post2209072238",
    "timm>=1.0.19",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "yacs>=0.1.8",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false
